tests/error/linear_errors/parent_moved7.err
Error: Copy violation (at $FILE:18:12)
   | 
16 | def foo(s: MyStruct1 @owned, b: bool) -> None:
17 |     while b:
18 |         a = s.x
   |             ^^^ Field `s.x.y` cannot be moved ...

Note:
   | 
17 |     while b:
18 |         a = s.x
   |             --- ... since field `s.x` with non-copyable type `MyStruct2` was
   |                 already moved here

Guppy compilation failed due to 1 previous error
